# roboteam_monitor

./: CMakeLists.txt  README.md
include/: AddFilterDialog.h  Chart.h  ChartModel.h  ChartSeries.h  ChartSeriesDialog.h  ChartView.h  Constants.h  Helpers.h  MainWindow.h  SelectTypeWidget.h
include/models/: ChartModel.h  SeriesModel.h
include/views/: ChartView.h  SeriesView.h
src/: AddFilterDialog.cpp  Chart.cpp  ChartModel.cpp  ChartSeries.cpp  ChartSeriesDialog.cpp  ChartView.cpp  Filter.h  Helpers.cpp  MainWindow.cpp  MenuBar.cpp  NewGraphDialog.cpp  SelectTypeWidget.cpp  WelcomeDialog.cpp  main.cpp
src/models/: ChartModel.cpp  ChartModel.h  ChartSeries.cpp  ChartSeries.h  FieldDefinition.cpp  FieldDefinition.h  Filter.cpp  Filter.h  FilterListModel.cpp  FilterListModel.h  FilterModel.cpp  FilterModel.h  SeriesInputSettingsModel.cpp  SeriesInputSettingsModel.h  SeriesModel.cpp  SeriesModel.h  SeriesSettingsModel.cpp  SeriesSettingsModel.h
src/presenters/: ChartPresenter.cpp  ChartPresenter.h  FilterPresenter.cpp  FilterPresenter.h  SeriesInputSettingsPresenter.cpp  SeriesInputSettingsPresenter.h  SeriesPresenter.cpp  SeriesPresenter.h  SeriesSettingsPresenter.cpp  SeriesSettingsPresenter.h
src/utilities/: Helpers.cpp  Helpers.h
src/utils/: Constants.h  Helpers.cpp  Helpers.h  SubscriptionManager.cpp  SubscriptionManager.h  Theme.cpp  Theme.h
src/views/: AddFilterDialog.cpp  AddFilterDialog.h  ChartSeriesDialog.cpp  ChartSeriesDialog.h  ChartView.cpp  ChartView.h  FilterView.cpp  FilterView.h  MainWindow.cpp  MainWindow.h  NewGraphDialog.cpp  NewGraphDialog.h  SeriesInputSettingsView.cpp  SeriesInputSettingsView.h  SeriesSettingsDialog.cpp  SeriesSettingsDialog.h  SeriesView.cpp  SeriesView.h  SeriesVisualizationSettingsView.cpp  SeriesVisualizationSettingsView.h  WelcomeDialog.cpp  WelcomeDialog.h
src/views/components/: ChartView.cpp  ChartView.h  ConfirmationWidget.cpp  ConfirmationWidget.h  MenuBar.cpp  MenuBar.h  SelectTypeWidget.cpp  SelectTypeWidget.h  SeriesView.cpp  SeriesView.h
src/views/dialogs/: AddFilterDialog.cpp  ChartSeriesDialog.cpp  ChartSeriesDialog.h  NewGraphDialog.cpp  WelcomeDialog.cpp
